[package]
name = "swarm-loc"
version = "0.1.0"
edition = "2024"

[features]
default = []
std = ["dep:rand"]

[dependencies]
rand = { version = "0.10.0", optional = true }
num-traits = { version = "0.2", default-features = false, features = ["libm"]}
numbrs = { git = "https://github.com/iamjakkie/numb.rs", default-features = false }